--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ python:
 addons:
   ssh_known_hosts:
     - 46.37.163.252
-    - gitlab.devops.ukfast.co.uk
 before_install:
   - openssl aes-256-cbc -K $encrypted_b5179de5a979_key -iv $encrypted_b5179de5a979_iv -in deploy_key.enc -out deploy_key -d
 install:
   - pip install Sphinx
+  - pip install recommonmark
 script:
   - sphinx-build -nW -b html -d build/doctrees source/ build/html
 after_success:
