--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,6 @@ after_success:
     - ssh root@46.37.163.252 rm -rf /var/www/vhosts/docs.ukfast.co.uk/htdocs/*
     - scp -r -p build/html/* root@46.37.163.252:/var/www/vhosts/docs.ukfast.co.uk/htdocs
     - ssh root@46.37.163.252 chown -R nginx.nginx /var/www/vhosts/docs.ukfast.co.uk/htdocs
-    - ssh root@46.37.163.252 bash /var/www/vhosts/docs.ukfast.co.uk/docs.ukfast.co.uk/deploy_docs.sh
+    - ssh root@46.37.163.252 rm -rf /opt/docs.ukfast.co.uk
+    - scp -rp * /opt/docs.ukfast.co.uk/
+    - ssh root@46.37.163.252 bash /opt/docs.ukfast.co.uk/deploy_docs.sh
